# kirby

./: .coveragerc  .env.default  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
docs/: Makefile  comparisons.md  concepts.md  conf.py  features.md  index.md  index.rst  requirements.txt  togofurther.md  usage.md
dummies/dummy/: __main__.py  setup.py
dummies/dummyfailingkirby/: setup.py
dummies/dummykirby/: setup.py
example/: cli.py  demo.json  populate_database.py
kirby/: __init__.py  cli.py  create_demo.py  demo.json  demo.py  exc.py  models.py  short_demo.json  short_demo.py  web.py
kirby/api/: __init__.py  context.py  ext.py  log.py  queue.py  testing.py
kirby/models/: __init__.py  security.py
kirby/proxy/: decoder.py  redis_proxy.py
kirby/supervisor/: __init__.py  arbiter.py  consensus.py  election.py  envbuilder.py  executor.py  scheduler.py  supervisor.py  watcher.py
kirby/templates/: kirby_master.html
kirby/web/: __init__.py  admin.py  endpoints.py  forms.py
tests/: conftest.py  test_api.py  test_create_demo.py  test_election.py  test_endpoints.py  test_executor.py  test_models.py  test_process_arbiter.py  test_process_watcher.py  test_runner.py  test_scheduler.py  test_user.py
tests/data/: sample_jobs_request.txt  sample_single_failing_job.txt  sample_single_job.txt  schedule.json
tests/proxy/: test_decoder.py  test_redis_proxy.py
tests/supervisor/: test_consensus.py  test_scheduler.py  test_supervisor.py
(+56 files in other folders)
