[metadata]
name = kirby
author = Adimian
author-email = contact@adimian.com
description = Kafka-based Stream Processing Framework
description-file = README.md
home-page = http://kirby.readthedocs.io
url = https://github.com/adimian/kirby

[files]
packages =
    kirby

[entry_points]
console_scripts =
    kirby = kirby.cli:cli

[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401
